# CameraEncoderX264

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/java/com/github/teocci/videoencoder/interfaces/: CameraReadyCallback.java  CommonGatewayInterface.java  UpdateDoneCallback.java
app/src/main/java/com/github/teocci/videoencoder/media/: MediaBlock.java
app/src/main/java/com/github/teocci/videoencoder/net/: NanoHTTPD.java  WebServer.java
app/src/main/java/com/github/teocci/videoencoder/ui/: CameraView.java  MainActivity.java  OverlayView.java
app/src/main/jni/: CMakeLists.txt  h264encoder.cpp  h264encoder.h  main_jni.cpp
app/src/main/jni/g72x/: g711.c  g72x.c  g72x.h
app/src/main/jni/x264/armeabi-v7a/output/lib/pkgconfig/: x264.pc
app/src/main/jni/x264/armeabi/output/lib/pkgconfig/: x264.pc
app/src/main/jni/x264/x86/output/include/: x264.h
app/src/main/jni/x264/x86/output/lib/pkgconfig/: x264.pc
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
